--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -2,10 +2,10 @@
 nixPkgs = ["nodejs", "nodejs.pkgs.npm"]
 
 [phases.install]
-cmds = ["npm install"]
+cmds = ["npm install", "cd frontend && npm install --legacy-peer-deps"]
 
 [phases.build]
-cmds = ["npm run build"]
+cmds = ["cd frontend && npm run build"]
 
 [start]
 cmd = "npm start"
